<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/all_lightblue"
    tools:context=".EditOV"
    android:focusable="true"
    android:focusableInTouchMode="true" >
    
    <EditText
        android:id="@+id/creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignParentRight="true"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/NameGroop" >

     </EditText>
     
           <ListView
               android:id="@id/android:list"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_above="@+id/button1"
               android:layout_alignParentRight="true"
               android:layout_below="@+id/creation"
               android:filterTouchesWhenObscured="false"
               android:textFilterEnabled="true" >

    </ListView>

       <Button
           android:id="@+id/button1"
           android:layout_width="100dp"
           android:layout_height="40dp"
           android:layout_alignParentBottom="true"
           android:layout_alignRight="@+id/creation"
           android:layout_marginBottom="14dp"
           android:onClick="Save_Click"
           android:text="@string/Yesss_Button" />

       <Button
           android:id="@+id/button2"
           android:layout_width="100dp"
           android:layout_height="40dp"
           android:layout_alignBottom="@+id/button1"
           android:onClick="Cancel_Click"
           android:text="@string/No_Button" />

       <Button
           android:id="@+id/button3"
           android:layout_width="100dp"
           android:layout_height="40dp"
           android:layout_alignBaseline="@+id/button1"
           android:layout_alignBottom="@+id/button1"
           android:layout_centerHorizontal="true"
           android:onClick="Add_Click"
           android:text="@string/Add22_Button" />

</RelativeLayout>
