<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/LightSteelBlue2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">
   
<LinearLayout 
    android:background="@color/LightSteelBlue2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".FirstScreen" >
     
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:typeface="serif"
        android:text="@string/autorization" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPassword" 
        android:layout_margin="15dp"
        android:ems="10"
		android:hint="@string/pleaseEnter"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="28dp"
        android:onClick="upd"
        android:text="@string/Update" />

    <Button
        android:id="@+id/button1"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="28dp"
        android:onClick="onclk"
        android:text="@string/Button_Pog" />
    
	</LinearLayout>

</FrameLayout>